Package.json file updated

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon Main.js"
-  },
+  "test": "node test.js",
+  "build": "echo \"Building project...\" && mkdir -p dist && cp -r views dist/views && cp -r public dist/public && cp Main.js dist/",
+  "start": "node dist/Main.js",
+  "dev": "nodemon Main.js"
+},
   "author": "",
   "license": "ISC",
   "dependencies": {
