--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-"test": "echo \"No tests specified\" && exit 0"
+"test": "echo \"No tests specified\" && exit 0",
   "build": "echo \"Building project...\" && mkdir -p dist && cp -r views dist/views && cp -r public dist/public && cp Main.js dist/",
   "start": "node dist/Main.js",
   "dev": "nodemon Main.js"
